pyParser.py
# Generated from py.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pyParser ( Parser ):

    grammarFileName = "py.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'f'", "<INVALID>", "<INVALID>", "'if'", 
                     "'elif'", "'else'", "'def'", "'return'", "'break'", 
                     "'continue'", "'while'", "'is'", "'not'", "'in'", "'or'", 
                     "'and'", "'for'", "'int'", "'str'", "'float'", "'list'", 
                     "'bool'", "'True'", "'False'", "'None'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "','", "'+'", "'-'", "'**'", 
                     "'*'", "'/'", "'//'", "'='", "'%'", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'!='", "'('", "')'", "'['", "']'", 
                     "':'", "'{'", "'}'", "'.'", "'->'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "NEWLINE", "COMMENT", "IF", 
                      "ELIF", "ELSE", "DEF", "RETURN", "BREAK", "CONTINUE", 
                      "WHILE", "IS", "NOT", "IN", "OR", "AND", "FOR", "INT", 
                      "STR", "FLOAT", "LIST", "BOOL", "TRUE", "FALSE", "NONE", 
                      "NUMBER", "STRING", "IDENTIFIER", "COMMA", "PLUS", 
                      "MINUS", "POW", "MULT", "DIV", "DIVI", "ASSIGN", "MOD", 
                      "LT", "GT", "LOE", "GOE", "EQ", "NEQ", "LPAREN", "RPAREN", 
                      "LBRACKET", "RBRACKET", "COLON", "BEGIN", "END", "DOT", 
                      "INDICATOR", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_simple_stmt = 2
    RULE_control_stmt = 3
    RULE_type = 4
    RULE_assignment = 5
    RULE_comparison_op = 6
    RULE_expr = 7
    RULE_logic_expr = 8
    RULE_logic_term = 9
    RULE_logic_factor = 10
    RULE_comparison_expr = 11
    RULE_valued_expr = 12
    RULE_term = 13
    RULE_factor = 14
    RULE_list_expr = 15
    RULE_key_value_pair = 16
    RULE_fstring_expr = 17
    RULE_compound_stmt = 18
    RULE_block = 19
    RULE_if_stmt = 20
    RULE_while_stmt = 21
    RULE_funcdef = 22
    RULE_for_stmt = 23

    ruleNames =  [ "program", "statement", "simple_stmt", "control_stmt", 
                   "type", "assignment", "comparison_op", "expr", "logic_expr", 
                   "logic_term", "logic_factor", "comparison_expr", "valued_expr", 
                   "term", "factor", "list_expr", "key_value_pair", "fstring_expr", 
                   "compound_stmt", "block", "if_stmt", "while_stmt", "funcdef", 
                   "for_stmt" ]

    EOF = Token.EOF
    T__0=1
    NEWLINE=2
    COMMENT=3
    IF=4
    ELIF=5
    ELSE=6
    DEF=7
    RETURN=8
    BREAK=9
    CONTINUE=10
    WHILE=11
    IS=12
    NOT=13
    IN=14
    OR=15
    AND=16
    FOR=17
    INT=18
    STR=19
    FLOAT=20
    LIST=21
    BOOL=22
    TRUE=23
    FALSE=24
    NONE=25
    NUMBER=26
    STRING=27
    IDENTIFIER=28
    COMMA=29
    PLUS=30
    MINUS=31
    POW=32
    MULT=33
    DIV=34
    DIVI=35
    ASSIGN=36
    MOD=37
    LT=38
    GT=39
    LOE=40
    GOE=41
    EQ=42
    NEQ=43
    LPAREN=44
    RPAREN=45
    LBRACKET=46
    RBRACKET=47
    COLON=48
    BEGIN=49
    END=50
    DOT=51
    INDICATOR=52
    WS=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(pyParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.StatementContext)
            else:
                return self.getTypedRuleContext(pyParser.StatementContext,i)


        def COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(pyParser.COMMENT)
            else:
                return self.getToken(pyParser.COMMENT, i)

        def getRuleIndex(self):
            return pyParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = pyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 87961458845854) != 0):
                self.state = 50
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 2, 4, 7, 11, 13, 17, 23, 24, 25, 26, 27, 28, 44, 46]:
                    self.state = 48
                    self.statement()
                    pass
                elif token in [3]:
                    self.state = 49
                    self.match(pyParser.COMMENT)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self.match(pyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(pyParser.Simple_stmtContext,0)


        def NEWLINE(self):
            return self.getToken(pyParser.NEWLINE, 0)

        def compound_stmt(self):
            return self.getTypedRuleContext(pyParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return pyParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = pyParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 13, 23, 24, 25, 26, 27, 28, 44, 46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.simple_stmt()
                self.state = 58
                self.match(pyParser.NEWLINE)
                pass
            elif token in [4, 7, 11, 17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.compound_stmt()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(pyParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(pyParser.AssignmentContext,0)


        def expr(self):
            return self.getTypedRuleContext(pyParser.ExprContext,0)


        def getRuleIndex(self):
            return pyParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stmt" ):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_stmt(self):

        localctx = pyParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Control_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(pyParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(pyParser.ExprContext,0)


        def BREAK(self):
            return self.getToken(pyParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(pyParser.CONTINUE, 0)

        def getRuleIndex(self):
            return pyParser.RULE_control_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterControl_stmt" ):
                listener.enterControl_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitControl_stmt" ):
                listener.exitControl_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitControl_stmt" ):
                return visitor.visitControl_stmt(self)
            else:
                return visitor.visitChildren(self)




    def control_stmt(self):

        localctx = pyParser.Control_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_control_stmt)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.match(pyParser.RETURN)
                self.state = 70
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 69
                    self.expr()


                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.match(pyParser.BREAK)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.match(pyParser.CONTINUE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(pyParser.INT, 0)

        def STR(self):
            return self.getToken(pyParser.STR, 0)

        def FLOAT(self):
            return self.getToken(pyParser.FLOAT, 0)

        def BOOL(self):
            return self.getToken(pyParser.BOOL, 0)

        def LIST(self):
            return self.getToken(pyParser.LIST, 0)

        def LBRACKET(self):
            return self.getToken(pyParser.LBRACKET, 0)

        def type_(self):
            return self.getTypedRuleContext(pyParser.TypeContext,0)


        def RBRACKET(self):
            return self.getToken(pyParser.RBRACKET, 0)

        def getRuleIndex(self):
            return pyParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = pyParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type)
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(pyParser.INT)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(pyParser.STR)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.match(pyParser.FLOAT)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.match(pyParser.BOOL)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.match(pyParser.LIST)
                self.state = 81
                self.match(pyParser.LBRACKET)
                self.state = 82
                self.type_()
                self.state = 83
                self.match(pyParser.RBRACKET)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(pyParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(pyParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(pyParser.ExprContext,0)


        def INDICATOR(self):
            return self.getToken(pyParser.INDICATOR, 0)

        def type_(self):
            return self.getTypedRuleContext(pyParser.TypeContext,0)


        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(pyParser.LBRACKET)
            else:
                return self.getToken(pyParser.LBRACKET, i)

        def valued_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.Valued_exprContext)
            else:
                return self.getTypedRuleContext(pyParser.Valued_exprContext,i)


        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(pyParser.RBRACKET)
            else:
                return self.getToken(pyParser.RBRACKET, i)

        def getRuleIndex(self):
            return pyParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = pyParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(pyParser.IDENTIFIER)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 88
                self.match(pyParser.LBRACKET)
                self.state = 89
                self.valued_expr()
                self.state = 90
                self.match(pyParser.RBRACKET)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(pyParser.ASSIGN)
            self.state = 98
            self.expr()
            self.state = 99
            self.match(pyParser.INDICATOR)
            self.state = 100
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comparison_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT(self):
            return self.getToken(pyParser.LT, 0)

        def GT(self):
            return self.getToken(pyParser.GT, 0)

        def EQ(self):
            return self.getToken(pyParser.EQ, 0)

        def NEQ(self):
            return self.getToken(pyParser.NEQ, 0)

        def GOE(self):
            return self.getToken(pyParser.GOE, 0)

        def LOE(self):
            return self.getToken(pyParser.LOE, 0)

        def IS(self):
            return self.getToken(pyParser.IS, 0)

        def IN(self):
            return self.getToken(pyParser.IN, 0)

        def NOT(self):
            return self.getToken(pyParser.NOT, 0)

        def getRuleIndex(self):
            return pyParser.RULE_comparison_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison_op" ):
                listener.enterComparison_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison_op" ):
                listener.exitComparison_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison_op" ):
                return visitor.visitComparison_op(self)
            else:
                return visitor.visitChildren(self)




    def comparison_op(self):

        localctx = pyParser.Comparison_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comparison_op)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(pyParser.LT)
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.match(pyParser.GT)
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.match(pyParser.EQ)
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                self.match(pyParser.NEQ)
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.match(pyParser.GOE)
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.match(pyParser.LOE)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 7)
                self.state = 108
                self.match(pyParser.IS)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 8)
                self.state = 109
                self.match(pyParser.IN)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 9)
                self.state = 110
                self.match(pyParser.NOT)
                self.state = 111
                self.match(pyParser.IN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valued_expr(self):
            return self.getTypedRuleContext(pyParser.Valued_exprContext,0)


        def logic_expr(self):
            return self.getTypedRuleContext(pyParser.Logic_exprContext,0)


        def getRuleIndex(self):
            return pyParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = pyParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expr)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.valued_expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.logic_expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.Logic_termContext)
            else:
                return self.getTypedRuleContext(pyParser.Logic_termContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(pyParser.OR)
            else:
                return self.getToken(pyParser.OR, i)

        def getRuleIndex(self):
            return pyParser.RULE_logic_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_expr" ):
                listener.enterLogic_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_expr" ):
                listener.exitLogic_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_expr" ):
                return visitor.visitLogic_expr(self)
            else:
                return visitor.visitChildren(self)




    def logic_expr(self):

        localctx = pyParser.Logic_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_logic_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.logic_term()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 119
                self.match(pyParser.OR)
                self.state = 120
                self.logic_term()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.Logic_factorContext)
            else:
                return self.getTypedRuleContext(pyParser.Logic_factorContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(pyParser.AND)
            else:
                return self.getToken(pyParser.AND, i)

        def getRuleIndex(self):
            return pyParser.RULE_logic_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_term" ):
                listener.enterLogic_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_term" ):
                listener.exitLogic_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_term" ):
                return visitor.visitLogic_term(self)
            else:
                return visitor.visitChildren(self)




    def logic_term(self):

        localctx = pyParser.Logic_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_logic_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.logic_factor()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 127
                self.match(pyParser.AND)
                self.state = 128
                self.logic_factor()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_factorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(pyParser.NOT, 0)

        def logic_factor(self):
            return self.getTypedRuleContext(pyParser.Logic_factorContext,0)


        def comparison_expr(self):
            return self.getTypedRuleContext(pyParser.Comparison_exprContext,0)


        def getRuleIndex(self):
            return pyParser.RULE_logic_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_factor" ):
                listener.enterLogic_factor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_factor" ):
                listener.exitLogic_factor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_factor" ):
                return visitor.visitLogic_factor(self)
            else:
                return visitor.visitChildren(self)




    def logic_factor(self):

        localctx = pyParser.Logic_factorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_logic_factor)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(pyParser.NOT)
                self.state = 135
                self.logic_factor()
                pass
            elif token in [1, 23, 24, 25, 26, 27, 28, 44, 46]:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.comparison_expr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comparison_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valued_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.Valued_exprContext)
            else:
                return self.getTypedRuleContext(pyParser.Valued_exprContext,i)


        def comparison_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.Comparison_opContext)
            else:
                return self.getTypedRuleContext(pyParser.Comparison_opContext,i)


        def getRuleIndex(self):
            return pyParser.RULE_comparison_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison_expr" ):
                listener.enterComparison_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison_expr" ):
                listener.exitComparison_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison_expr" ):
                return visitor.visitComparison_expr(self)
            else:
                return visitor.visitChildren(self)




    def comparison_expr(self):

        localctx = pyParser.Comparison_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_comparison_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.valued_expr()
            self.state = 145
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 140
                    self.comparison_op()
                    self.state = 141
                    self.valued_expr() 
                self.state = 147
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Valued_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.TermContext)
            else:
                return self.getTypedRuleContext(pyParser.TermContext,i)

